--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,6 @@
-    <p align="center"> Trademark 2018</p>
+    <div class=container>
+        <p align="center"> Trademark 2018</p>
+    </div>
     </body>
     
 </html>
