After Dynamic Price

--- a/v8/views/login.ejs
+++ b/v8/views/login.ejs
@@ -6,4 +6,4 @@
     <input type = "password" placeholdeer= "password" name="password">
     <button>Login</button>
 </form>
-<% include partials/header %>
+<% include partials/footer %>
