--- a/v8/views/campgrounds/edit.ejs
+++ b/v8/views/campgrounds/edit.ejs
@@ -2,21 +2,21 @@
 <div class="container">
     <div class="row">
         
-        <h1 style="text-align: center;">Add new Campground</h1>
+        <h1 style="text-align: center;">Edit <%=campground.name%></h1>
     
         <div style="width:30%; margin: 25px auto;">
-            <form method="POST" action="/campgrounds">
+            <form method="POST" action="/campgrounds/<%=campground._id%>?_method=PUT">
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="name"; name="name">
+                    <input class="form-control" type="text" value="<%=campground.name%>" name="campground[name]">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="number" placeholder="price"; name="price" min="0.01" step="0.01">
+                    <input class="form-control" type="number" value="<%=campground.price%>" name="campground[price]" min="0.01" step="0.01">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="image url"; name="image">
+                    <input class="form-control" type="text" value="<%=campground.image%>" name="campground[image]">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="description"; name="description">
+                    <input class="form-control" type="text" value="<%=campground.description%>" name="campground[description]">
                 </div>
                 <div class="form-group">
                     <button class="btn  btn-lg btn-primary btn-block">Submit</button>
