--- a/v8/views/comments/edit.ejs
+++ b/v8/views/comments/edit.ejs
@@ -2,12 +2,13 @@
 <div class="container">
     <div class="row">
         
-        <h1 style="text-align: center;">Add new Comment to <%= campground.name %> </h1>
+        <h1 style="text-align: center;">Edit Comment</h1>
     
         <div style="width:30%; margin: 25px auto;">
-            <form method="POST" action="/campgrounds/<%= campground._id%>/comments">
+            <form method="POST" action="/campgrounds/<%= campground_id%>/comments/<%= comment._id%>?_method=PUT">
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="text"; name="comment[text]">
+                    <input class="form-control" type="text" value= "<%=comment.text%>" name="comment[text]">
+                    
                 </div>
                 
                 <div class="form-group">
