--- a/v8/views/partials/header.ejs
+++ b/v8/views/partials/header.ejs
@@ -30,12 +30,12 @@
         <div class= "container">
             <% if (error && error.length > 0){ %>
                 <div class="alert alert-danger" role= "alert">
-                    <h1><%= error %></h1>
+                    <p><%= error %></p>
                 </div>
             <% } %>
             <% if (success && success.length > 0){ %>
                 <div class="alert alert-success" role= "alert">
-                    <h1><%= success %></h1>
+                    <p><%= success %></p>
                 </div>
             <% } %>
         </div>
